--- a/src/scss/components/question.scss
+++ b/src/scss/components/question.scss
@@ -1,7 +1,12 @@
 .crossword-question {
     &--index {
         display: inline-block;
-        min-width: 15px;
+        min-width: 25px;
+        font-weight: $font-style-roboto-black;
+        font-size: 1.5em;
     }
-    &--text {}
+
+    &:not(:first-child) {
+        margin-top: 15px;
+    }
 }
