--- a/src/scss/components/grid.scss
+++ b/src/scss/components/grid.scss
@@ -1,5 +1,5 @@
 @import './row';
 
 .crossword-grid {
-    outline: 1px solid $color-crossword-border;
+    outline: border-style($color-crossword-border);
 }
