--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,5 +3,7 @@
 @import './helpers/breakpoints';
 @import './helpers/typography';
 @import './helpers/colors';
+@import './mixins/breakpoint';
+@import './mixins/border-style';
 @import './base';
 @import './pages/home';
