Show current question. Add keyboard navigation. Remove + and - from cells.

--- a/src/scss/components/question.scss
+++ b/src/scss/components/question.scss
@@ -9,4 +9,8 @@
     &:not(:first-child) {
         margin-top: 15px;
     }
+
+    &.active {
+        outline: 1px dotted $color-question-border;
+    }
 }
