--- a/src/scss/helpers/variables.scss
+++ b/src/scss/helpers/variables.scss
@@ -9,3 +9,4 @@ $default-border-width: 1px;
 $default-border-style: solid;
 $default-hover-speed: .2s;
 $default-hover-opacity: 0.8;
+$default-page-transition-speed: 0.75s;
